--- a/src/sass/base/_typography.scss
+++ b/src/sass/base/_typography.scss
@@ -158,7 +158,7 @@ button {
     color: a.$color-black-75;
     width: 90%;
     font-family: "Karla";
-    font-size: clamp(1.4rem, 2vw, 2.5rem);
+    font-size: clamp(1.3rem, 2vw, 2.5rem);
     @include a.respond(laptop) {
       font-size: clamp(1.5rem, 1.75vw, 2.5rem);
     }
